--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 <!--4 квадрат-->
     <footer>
         <div class="container">
-            <div class=" line">
+            <div class="line">
         <a href="index.html" class="footer-logo" lang="en"><span>Web</span>Studio</a>
         <address>
             <ul>
@@ -202,6 +202,14 @@
         <li><a href="/"><svg width="22px" height="22px"><use href="./images/icons.svg#Linkedin"></use></svg></a></li>
     </ul>
 </div>
+<form class="form-footer">
+    <label class="row">Подпишитесь на рассылку
+        <input type="email" name="email" placeholder="E-mail"></input>
+</label>
+<button type="submit">Подписаться<svg width="22px" height="22px">
+    <use href="images/icons.svg#icon-send"></use>
+</svg></button>
+</form>
 </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
