--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
+            <button type="submit" class="form-button">Отправить</button>
         <button type="button" data-modal-close>
             <svg width="11px" height="11px">
             <use href="./images/icons.svg#Vector"></use>
