--- a/index.html
+++ b/index.html
@@ -214,7 +214,41 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button type="submit" class="form-button">Отправить</button>
+            <p>Оставьте свои данные, мы вам перезвоним</p>
+<form class="modal-form">
+    <label  >
+        <input type="text" name="name" class="modal-input">
+        <span class="input-svg"><svg width="18px" height="18px">
+            <use href="./images/icons.svg#person-black"></use>
+        </svg></span>
+        <span class="up">Имя</span>
+    </label>
+    <label  >
+        <input type="tel" name="tel" class="modal-input">
+        <span class="input-svg"><svg width="18px" height="18px">
+            <use href="./images/icons.svg#phone-black"></use>
+        </svg></span>
+        <span class="up">Телефон</span>
+    </label>
+    <label>
+        <input type="email" name="email"  class="modal-input">
+        <span class="input-svg"><svg width="18px" height="18px">
+            <use href="./images/icons.svg#email-black"></use>
+        </svg></span>
+        <span class="up">Почта</span>
+    </label>
+    <label class="textarea">
+        <span>Комментарий</span>
+        <textarea name="comment" placeholder="Введите текст"></textarea>
+    </label>
+    <label class="checkbox">
+    <input type="checkbox" name="accept" checked />
+    <span class="icon-checkbox"></span>
+    Соглашаюсь с рассылкой и принимаю&nbsp<span>Условия договора</span>
+    </label>            
+    <button type="submit" class="form-button">Отправить</button>
+</form>
+
         <button type="button" data-modal-close>
             <svg width="11px" height="11px">
             <use href="./images/icons.svg#Vector"></use>
